# aws-c-crt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-crt.sh  compile_commands.json  customer_prs.csv  ec2  run-s3-sample.sh  runBenchmarks.sh  sync-reset.py  sync.py  update-all.sh
scripts/: accept_customers_pr.sh
