cmake_minimum_required(VERSION 3.13)
project(aws-c)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/aws-c-common/cmake)
include(AwsFindPackage)
set(IN_SOURCE_BUILD ON)

add_subdirectory(aws-c-common)
if(UNIX AND NOT APPLE)
    add_subdirectory(aws-lc)
    add_subdirectory(s2n)
endif()
add_subdirectory(aws-c-cal)
add_subdirectory(aws-c-io)
add_subdirectory(aws-checksums)
add_subdirectory(aws-c-compression)
add_subdirectory(aws-c-event-stream)
add_subdirectory(aws-c-http)
add_subdirectory(aws-c-sdkutils)
add_subdirectory(aws-c-auth)
add_subdirectory(aws-c-mqtt)
add_subdirectory(aws-c-s3)
add_subdirectory(aws-c-iot)
